{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 14,
  "lineage": "f064219a-750d-8f23-f3ab-ca829bda7f82",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Terraform_scale_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491085382735:internet-gateway/igw-001750e025248b401",
            "id": "igw-001750e025248b401",
            "owner_id": "491085382735",
            "tags": {
              "Name": "Terraform_scale_igw"
            },
            "tags_all": {
              "Name": "Terraform_scale_igw"
            },
            "vpc_id": "vpc-0ff1dd3166902b31d"
          },
          "dependencies": [
            "aws_vpc.Terraform_scale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Terraform_scale_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491085382735:route-table/rtb-07854d8d8efc9bf0c",
            "id": "rtb-07854d8d8efc9bf0c",
            "owner_id": "491085382735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001750e025248b401",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_scale_routetable"
            },
            "tags_all": {
              "Name": "Terraform_scale_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff1dd3166902b31d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Terraform_scale_igw",
            "aws_vpc.Terraform_scale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f93eb1626247ae0",
            "route_table_id": "rtb-07854d8d8efc9bf0c",
            "subnet_id": "subnet-0c4416e38c39a4790"
          },
          "dependencies": [
            "aws_internet_gateway.Terraform_scale_igw",
            "aws_route_table.Terraform_scale_routetable",
            "aws_subnet.Terraform_scale_public_subnet",
            "aws_vpc.Terraform_scale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Terraform_scale_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491085382735:security-group/sg-02dfe6e5fd58aa262",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02dfe6e5fd58aa262",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Terraform_scale_sg20240925075020377200000001",
            "name_prefix": "Terraform_scale_sg",
            "owner_id": "491085382735",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff1dd3166902b31d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terraform_scale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terraform_scale_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491085382735:subnet/subnet-0c3d1e2d49b47e6dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3d1e2d49b47e6dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491085382735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_scale_private_subnet"
            },
            "tags_all": {
              "Name": "Terraform_scale_private_subnet"
            },
            "vpc_id": "vpc-0ff1dd3166902b31d"
          },
          "dependencies": [
            "aws_vpc.Terraform_scale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terraform_scale_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491085382735:subnet/subnet-0c4416e38c39a4790",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4416e38c39a4790",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491085382735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_scale_public_subnet"
            },
            "tags_all": {
              "Name": "Terraform_scale_public_subnet"
            },
            "vpc_id": "vpc-0ff1dd3166902b31d"
          },
          "dependencies": [
            "aws_vpc.Terraform_scale_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Terraform_scale_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491085382735:vpc/vpc-0ff1dd3166902b31d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09a5192e265f4a12d",
            "default_route_table_id": "rtb-073cdbdd95062f5ea",
            "default_security_group_id": "sg-0784bb348836aa2b1",
            "dhcp_options_id": "dopt-0581e2305b0b258b5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff1dd3166902b31d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-073cdbdd95062f5ea",
            "owner_id": "491085382735",
            "tags": {
              "Name": "Terraform_scale_vpc"
            },
            "tags_all": {
              "Name": "Terraform_scale_vpc"
            }
          }
        }
      ]
    }
  ]
}